<resources>
    <string name="app_name">VAMPSample</string>
    <string name="vamp_ad_id">ID:%s</string>
    <string name="vamp_ad1">Ad1</string>
    <string name="vamp_ad2">Ad2</string>
    <string name="vamp_multi">Multi Ad</string>
    <string name="info">Info</string>
    <string name="load">Load</string>
    <string name="show">Show</string>
    <string name="load_show">Load &amp; Show</string>
    <string name="sound_off">SoundOff</string>
    <string name="sound_on">SoundOn</string>
    <string name="test_mode">TestMode</string>
    <string name="debug_mode">DebugMode</string>
</resources>
